# cdm-task-service

./: .gitignore  Dockerfile  LICENSE.md  Pipfile  README.md  README_external_s3_testing.md  RELEASE_NOTES.md  cdmtaskservice_config.toml.jinja  cdmtaskservice_refdata_config.toml.jinja  codecov.yml  docker-compose.yaml  image_rules.md  pyproject.toml  test.cfg.example
.github/: dependabot.yml
.github/workflows/: build_publish_scan_managed.yaml  pr_build.yml  test.yml  two_step_build_publish_scan_managed.yaml
cdmtaskservice/: app.py  app_state.py  arg_checkers.py  argument_generator.py  callback_url_paths.py  config.py  config_s3.py  coroutine_manager.py  dockerimages.py  error_mapping.py  errors.py  exceptions.py  flow_cleaner.py  git_commit.py  http_bearer.py  image_remote_lookup.py  images.py  input_file_locations.py  job_state.py  job_submit.py  kafka_notifications.py  kb_auth.py  localfiles.py  logfields.py  manifest_files.py  models.py  models_errors.py  mongo.py  refdata.py  resource_destructor.py  routes.py  sites.py  subjobs.py  timestamp.py  update_state.py  user.py  version.py
cdmtaskservice/condor/: client.py  config.py  run_job.sh
cdmtaskservice/externalexecution/: config.py  container_runner.py  executor.py  main.py
cdmtaskservice/jaws/: client.py  config.py  constants.py  output.py  poller.py  remote.py  sitemapper.py  wdl.py
cdmtaskservice/jobflows/: container_filenames.py  flowmanager.py  jaws_flows_provider.py  kbase.py  lawrencium_jaws.py  nersc_jaws.py  s3config.py  state_updates.py
cdmtaskservice/nersc/: client.py  manager.py  paths.py  remote.py  status.py
cdmtaskservice/notifications/: kafka_checker.py  kafka_notifications.py
cdmtaskservice/refserv/: client.py  config.py  cts_client.py  models.py  refdata_manager.py  routes.py
cdmtaskservice/s3/: client.py  exceptions.py  paths.py  remote.py
design/: design.md  kafka_integration.md
docker_compose/htcondor/: Dockerfile  README.md  condor_config.local  signal_test.py  signal_test.sh  start_condor_and_gen_token.sh  submit_test_script
docs/: admin_image_setup.md  examples.md
docs/examples/: GeNomad.md  collections_checkm2.md  seqkit.md
scripts/: entrypoint.sh
test/: app_state_test.py  app_test.py  arg_checkers_test.py  argument_generator_test.py  callback_url_paths_test.py  config.py  config_s3_test.py  config_test.py  conftest.py  coroutine_manager_test.py  dockerimages_test.py  error_mapping_test.py  flow_cleaner_test.py  http_bearer_test.py  image_remote_lookup_test.py  images_test.py  input_file_locations_test.py  job_state_test.py  job_submit_test.py  kafka_notifications_test.py  kb_auth_test.py  localfiles_test.py  manifest_files_test.py  models_test.py  mongo_test.py  refdata_test.py  resource_destructor_test.py  routes_test.py  sites_test.py  subjobs_test.py  timestamp_test.py  update_state_test.py  user_test.py  utils.py
test/condor/: condor_client_test.py  condor_config_test.py
test/controllers/: kafka_controller.py  minio.py  mongo.py
test/externalexecutor/: container_runner_test.py  executor_config_test.py  executor_main_test.py  executor_test.py
test/jaws/: jaws_client_test.py  jaws_config_test.py  jaws_remote_test.py  output_test.py  poller_test.py  sitemapper_test.py  wdl_test.py
test/jobflows/: container_filenames_test.py  flowmanager_test.py  jaws_flows_provider_test.py  kbase_test.py  lawrencium_jaws_test.py  nersc_jaws_test.py  s3config_test.py  state_updates_test.py
test/nersc/: manager_test.py  nersc_client_test.py  (+3 more)
test_common/: config.py
test_manual/: README.md  dump_kafka_topic.py  kafka_notifier_manual_test.py
(+25 files in other folders)
