[project]
name = "cdm-task-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore==3.1.1",
    "aiofiles==25.1.0",
    "aiohttp==3.13.3",
    "aiohttp-socks==0.11.0",
    "aiokafka==0.12.0",
    "apscheduler==3.11.2",
    "async-lru==2.0.5",
    "awscrt==0.31.0",
    "bidict==0.23.1",
    "cacheout==0.16.0",
    "docker==7.1.0",
    "docker-image-py==0.1.13",
    "fastapi[standard]==0.128.0",
    "htcondor==25.0.5",
    "jinja-cli==1.2.2",
    "kbase-auth-client==0.1.1",
    "marisa-trie==1.3.1",
    "motor==3.7.1",
    "python-json-logger==4.0.0",
    "requests==2.32.5",
    "sfapi-client==0.4.1",
    "uvicorn[standard]==0.40.0",
    "yarl==1.22.0",
]

[dependency-groups]
dev = [
    # aiobotocore 3.1.0 cannot be installed with boto3 > 1.42.19
    "boto3==1.42.19",
    "ipython==9.9.0",
    "kafka-python==2.3.0",
    "pymongo==4.16.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]
