[project]
name = "cdm-task-service"
version = "0.1.0"
description = "CDM Task Service"
readme = "README.md"
# Note - need to be flexible on the patch version here since the HTCondor workers may have
# various versions of pip / uv
requires-python = ">=3.12,<3.13"

dependencies = [
    "aiobotocore==3.2.1",
    "aiofiles==25.1.0",
    "aiohttp==3.13.5",
    "aiohttp-socks==0.11.0",
    "aiokafka==0.13.0",
    "apscheduler==3.11.2",
    "async-lru==2.2.0",
    "awscrt==0.31.2",
    "bidict==0.23.1",
    "cacheout==0.16.0",
    "docker==7.1.0",
    "docker-image-py==0.1.13",
    "fastapi[standard]==0.135.1",
    "htcondor==25.0.6",
    "jinja-cli==1.2.2",
    "kbase-auth-client==0.1.2",
    "marisa-trie==1.3.1",
    "motor==3.7.1",
    "python-json-logger==4.0.0",
    "requests==2.32.5",
    "sfapi-client==0.4.1",
    "uvicorn[standard]==0.41.0",
    "yarl==1.23.0",
]

[dependency-groups]
dev = [
    # aiobotocore 3.2.1 cannot be installed with boto3 > 1.42.61
    "boto3==1.42.61",
    "ipython==9.11.0",
    "kafka-python==2.3.0",
    "pymongo==4.16.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
