[project]
name = "cdm-task-service"
version = "0.1.0"
description = "CDM Task Service"
readme = "README.md"
# Note - need to be flexible on the patch version here since the HTCondor workers may have
# various versions of pip / uv
requires-python = ">=3.12,<3.13"

dependencies = [
    "aiobotocore==3.5.0",
    "aiofiles==25.1.0",
    "aiohttp==3.13.5",
    "aiohttp-socks==0.11.0",
    "aiokafka==0.14.0",
    "apscheduler==3.11.2",
    "async-lru==2.3.0",
    "awscrt==0.32.2",
    "bidict==0.23.1",
    "cacheout==0.16.0",
    "docker==7.1.0",
    "docker-image-py==0.1.13",
    "fastapi[standard]==0.136.1",
    # stay on htcondor 25.0.X - LTS version
    "htcondor==25.8.2",
    "jinja-cli==1.2.2",
    "kbase-auth-client==0.1.2",
    "marisa-trie==1.4.1",
    "motor==3.7.1",
    "python-json-logger==4.1.0",
    "requests==2.33.1",
    "sfapi-client==0.4.1",
    "uvicorn[standard]==0.46.0",
    "yarl==1.23.0",
]

[dependency-groups]
dev = [
    # aiobotocore 3.5.0 cannot be installed with boto3 > 1.42.91
    "boto3==1.42.91",
    "ipython==9.13.0",
    "kafka-python==2.3.1",
    "pymongo==4.17.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
